# jewel-db

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  run.sh
.github/workflows/: pre-commit.yml
jewel_db/: config.py  db.py  main.py
jewel_db/api/: items.py  tags.py
jewel_db/app/: config.py
jewel_db/client/: app.json  package-lock.json  package.json
jewel_db/client/app/(tabs)/: index.tsx
jewel_db/core/: database.py  dependencies.py  models_import.py  settings.py
jewel_db/models/: __init__.py  jewelry_image.py  jewelry_item.py  jewelry_tag.py
jewel_db/schemas/: __init__.py  jewelry_item.py  jewelry_tag.py
jewel_db/services/: image_utils.py
jewel_db/static/js/: item_detail.js  item_form.js  items_list.js  main.js  tag_select.js  tags_list.js  webcam_capture.js
jewel_db/templates/: base.html  index.html  item_detail.html  item_form.html  items_list.html  tags_list.html
tests/: conftest.py  test_image_utils.py  test_items_api.py  test_tags.py
