[tool.poetry]
name = "jewel-db"
packages = [
    { include = "jewel_db" }
]
version = "0.1.0"
description = "A modern jewelry inventory system with AI integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
jinja2 = "^3.1.2"
tailwindcss = "*"
pillow = "^10.0.0"
python-dotenv = "^1.0.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
ruff = "^0.12.1"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enforce these rule groups
select = ["E", "F", "W", "C90", "I", "UP"]
# No special ignores (or list only codes your version of ruff knows)
ignore = []
# Match your Python target
target-version = "py311"
# Max line length
line-length = 88
# Folders to skip
exclude = [".git", ".venv", "build", "dist", "__pycache__"]
# File-specific ignores: quoted globs → list of codes
per-file-ignores = { "scripts/*.py" = ["T201"], "__init__.py" = ["F401"] }

[tool.black]
# Black settings
line-length    = 88
target-version = ["py311"]
exclude        = '''
/(
  \.git
 |\.venv
 |build
 |dist
 |__pycache__
)/
'''

[tool.isort]
# Make isort compatible with Black
profile               = "black"
line_length           = 88
multi_line_output     = 3
include_trailing_comma = true
known_first_party     = ["jewel_db", "jewelry_inventory"]
default_section       = "THIRDPARTY"